fix page transition bug involving footer, and kill all scrollbar jump

--- a/src/miscellaneous.css
+++ b/src/miscellaneous.css
@@ -1,5 +1,12 @@
+html {
+  margin-right: calc(-100vw + 100%);
+  /* overlap scrollbar; will be offset by margin-right of equal value (but positive)
+  on body after calculation is taken from #scrollbarWidthGetter*/
+}
+
 #root {
   @apply flex flex-col min-h-screen;
+  /* ensure that viewport height is full, at minimum */
 }
 
 body {
@@ -8,13 +15,14 @@ body {
     Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
+  /* overflow is hidden here to prevent horizontal scrollbar on page transition;
+  alternatively we could toggle this property in and out from the CSSTransition onExit func */
 }
 
-/* main and root styles to ensure that footer doesn't creep up the page
-in the event that there isn't much content within main */
 main {
   flex: 1 1 auto;
+  /* ensure that footer doesn't creep up the page if there isn't much content within main */
 }
 
 code {
@@ -124,6 +132,10 @@ h1:focus {
   @apply absolute top-0 bottom-0 left-0 right-0 w-full h-full object-cover;
 }
 
+.absolutely-zeroed {
+  @apply absolute top-0 bottom-0 left-0 right-0;
+}
+
 .ratio-16-9 {
   position: relative;
   overflow: hidden;
@@ -216,8 +228,9 @@ h1:focus {
   height: 150%;
   top: -25%;
   left: -25%;
-  /* background-color: rgba(0, 0, 0, 0.55); */
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  /* margin: 0 2px; */
 
   &--is-left-edge {
     left: 0;
@@ -245,13 +258,16 @@ h1:focus {
   &-exit {
     transform: scale(1);
     visibility: visible;
+    /* opacity: 1; */
   }
 
   &-exit-active {
     transform: scale(calc(2 / 3));
     visibility: hidden;
+    /* opacity: 0; */
     transition: transform 400ms cubic-bezier(0, 0, 0.2, 1),
       visibility 400ms cubic-bezier(0, 0, 0.2, 1);
+    /* opacity 400ms cubic-bezier(0, 0, 0.2, 1); */
     transition-delay: 400ms;
   }
 }
@@ -339,7 +355,6 @@ h1:focus {
 .page-fade {
   &-enter {
     opacity: 0;
-    /* overflow hidden eases scrollbar transitions */
   }
 
   &-enter-active {
@@ -349,23 +364,31 @@ h1:focus {
 
   &-exit {
     opacity: 1;
-    /* have exiting page overlap via absolute positioning */
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    /* width: 100vw; */
-    /* overflow: hidden; */
-    /* max-width: 100%; */
-    /* margin-right: calc(-100vw + 100%); */
-    /* width here prevents content from jumping to left in the event that you are
-    transitioning from a page without a scrollbar to a page with a scrollbar */
+    width: 100%;
   }
 
   &-exit-active {
     opacity: 0;
     transition: opacity 150ms ease-in;
+  }
+}
+
+.reveal {
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  &-appear {
+    opacity: 0;
+  }
+  &-appear-active {
+    opacity: 1;
+    transition: opacity 400ms ease-in-out 600ms;
+  }
+  &-exit {
+    opacity: 1;
+  }
+  &-exit-active {
+    opacity: 0;
+    transition: opacity 450ms ease-in-out 250ms;
   }
 }
 
@@ -429,4 +452,10 @@ h1:focus {
 
 .enter-from-right {
   animation: enterFromRight 800ms ease;
+}
+
+@keyframes getBorn {
+  100% {
+    opacity: 1;
+  }
 }
